@@ -1,4 +1,4 @@
 DIST plexus-io-1.0_alpha2_pre20070602.tar.bz2 14792 RMD160 5e10dce618374b2ac74d216180023f62324f43a3 SHA1 8eb71152bc9b1480235b865b2d51c30cfee0fb87 SHA256 b9c6f44320aa4dec40261d489f96b2933f01124eeba3839939e5c4ac35110816
-EBUILD plexus-io-1.0_alpha2_pre20070602.ebuild 812 RMD160 450f9e86b34e3fcad89ef863404ab521a275ed16 SHA1 678440c304a4279796e219be18e89fa1860f31b2 SHA256 7bf6d00f691ef07756971999968513af51ac2a62d55273dc6041f22bca3c9759
-MISC ChangeLog 375 RMD160 0b49ab5de992e5be37045cd9ecb9685b59f7dc73 SHA1 94eb33795f8997c7b875b1412b9cd7490b6bc515 SHA256 6882ec81fb52b86e2edf9a632da975d151347209e277c380ab889cf4e88296e5
+EBUILD plexus-io-1.0_alpha2_pre20070602.ebuild 914 RMD160 cecffaac77046017816acde35bc4266c63b57669 SHA1 2b572907e2b2647a1401777acaaa919b2da9f8d5 SHA256 1a13aa6dbe0123dad9d0a4ad3c98e57c9c95bb9e0bb77b269d74b99eeeda9497
+MISC ChangeLog 479 RMD160 e7b37d286ca5b41a1ffc350af35094c66fe1f101 SHA1 b2d4dae26309e5e995be3239db218e40b16239ef SHA256 8dcda9eb822ae5a9e275c5e4936377871463dad91fc8b8aac80778ff5e3224c3
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
